Bug 147284 - Time required to export a large document to PDF has doubled for Latin (Win?)
Summary: Time required to export a large document to PDF has doubled for Latin (Win?)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: PDF-Export
  Show dependency treegraph
 
Reported: 2022-02-08 13:07 UTC by Telesto
Modified: 2022-05-07 14:06 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2022-02-08 13:07:05 UTC
Description:
Time required to export a large document has doubled for Latin

Steps to Reproduce:
1. Open attachment 136841 [details] (bug 112989)
2. Press PDF button in toolbar and save the export somewhere (measure time required to export excl. repagination)

Actual Results:
7.4 -> 40 seconds
4.4.7.2 -> 20 seconds

Expected Results:
20 seconds


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ca657b98e49eb2282775f7919827062a7a0b4bfe
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Dieter 2022-02-22 18:59:49 UTC
I confirm it with

Version: 7.3.0.3 (x64) / LibreOffice Community
Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL

It tokk around 65 seconds.
Comment 2 Commit Notification 2022-03-15 13:40:31 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/baf6c57496fe38c5ee4ab34829aaf4d4d6598d28

faster comparison of very long strings (tdf#147284)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Telesto 2022-04-05 14:58:10 UTC
23 seconds with same system.. nice improvement 
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: cf4d5ed026c8799a70432a832a8a707c2e316216
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL Jumbo
Comment 4 Luboš Luňák 2022-04-14 08:09:30 UTC
I think this is now good enough for a document with 3000 pages.
Comment 5 Dieter 2022-05-07 14:06:22 UTC
(In reply to Telesto from comment #3)
> 23 seconds with same system.. nice improvement 

=> VERIFIED