faster comparison of very long strings (tdf#147284)

Comparing long string backwards is inefficient because forward
compare has better memory prefetch. For the PDF export
of the document this drops the comparison cost to 1% from 6%.

Change-Id: Ide29608bf56915cc528e6ec8b98ccf8ebf4693a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131579
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
Tested-by: Luboš Luňák <l.lunak@collabora.com>